--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
   <main>
     <section class="base-container">
-      <img src="./images/desktop/image-header.jpg" class="bg">
+      <img src="./images/desktop/image-header.jpg" class="bg" alt="header">
       <nav>
         <header class="logo">
 
@@ -58,11 +58,11 @@
         </p>
         <button>Learn more</button>
       </div>
-      <img src="./images/desktop/image-transform.jpg" class="two">
+      <img src="./images/desktop/image-transform.jpg" class="two" alt="image-transform">
 
 
 
-      <img src="./images/desktop/image-stand-out.jpg" class="three">
+      <img src="./images/desktop/image-stand-out.jpg" class="three" alt="image-stand-out">
 
 
       <div class="info-img pink four">
@@ -74,7 +74,7 @@
       </div>
 
       <div class="picture-info five">
-        <img src="./images/desktop/image-graphic-design.jpg">
+        <img src="./images/desktop/image-graphic-design.jpg" alt="image-graphic-design">
         <div class="info-container">
 
 
@@ -86,7 +86,7 @@
         </div>
       </div>
       <div class="picture-info six">
-        <img src="./images/desktop/image-photography.jpg">
+        <img src="./images/desktop/image-photography.jpg" alt="image-photography">
         <div class="info-container">
           <h3 class="blue">Photography</h3>
           <p class="blue">Increase your credibility by getting the most stunning, high-quality photos that improve your
@@ -103,7 +103,7 @@
 
 
         <div class="card">
-          <img src="./images/image-emily.jpg">
+          <img src="./images/image-emily.jpg" alt="emily">
           <p>We put our trust in Sunnyside and they delivered, making sure our needs were met and deadlines were always
             hit.</p>
           <div class="name-job">
@@ -112,7 +112,7 @@
           </div>
         </div>
         <div class="card">
-          <img src="./images/image-thomas.jpg">
+          <img src="./images/image-thomas.jpg" alt="thomas">
           <p>Sunnyside’s enthusiasm coupled with their keen interest in our brand’s success made it a satisfying and
             enjoyable
             experience.</p>
@@ -123,7 +123,7 @@
           </div>
         </div>
         <div class="card">
-          <img src="./images/image-jennie.jpg">
+          <img src="./images/image-jennie.jpg" alt="jennie">
           <p>Incredible end result! Our sales increased over 400% when we worked with Sunnyside. Highly recommended!</p>
           <div class="name-job">
             <span class="name">Jennie F.</span>
@@ -136,10 +136,10 @@
       </div>
     </section>
     <section class="container-three">
-      <img src="./images/desktop/image-gallery-milkbottles.jpg">
-      <img src="./images/desktop/image-gallery-orange.jpg">
-      <img src="./images/desktop/image-gallery-cone.jpg">
-      <img src="./images/desktop/image-gallery-sugarcubes.jpg">
+      <img src="./images/desktop/image-gallery-milkbottles.jpg" alt="milkbottles">
+      <img src="./images/desktop/image-gallery-orange.jpg" alt="orange">
+      <img src="./images/desktop/image-gallery-cone.jpg" alt="cone">
+      <img src="./images/desktop/image-gallery-sugarcubes.jpg" alt="sugarcubes">
     </section>
     <footer>
       <h2>sunnyside</h2>
